--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@hapi/boom": "10.0.0",
+    "@sentry/node": "7.112.2",
+    "@sentry/tracing": "7.112.2",
     "@slack/bolt": "3.14.0",
     "axios": "1.3.1",
     "body-parser": "1.20.1",
