--- a/.infra/ansible/roles/setup/files/app/.overrides/production/docker-compose.env.yml
+++ b/.infra/ansible/roles/setup/files/app/.overrides/production/docker-compose.env.yml
@@ -27,3 +27,5 @@ services:
       - SIRIUS_SLACK_TOKEN={{ vault[env_type].SIRIUS_SLACK_TOKEN }}
       - SIRIUS_SLACK_SIGNING_SECRET={{ vault[env_type].SIRIUS_SLACK_SIGNING_SECRET }}
       - SIRIUS_SLACK_CHANNEL=sirius-bot
+      - SIRIUS_SENTRY_DSN=https://e7c750d2c1c94092ba24d85896703a47@sentry.incubateur.net/152
+
