--- a/.infra/ansible/roles/setup/files/app/.overrides/recette/docker-compose.env.yml
+++ b/.infra/ansible/roles/setup/files/app/.overrides/recette/docker-compose.env.yml
@@ -24,6 +24,7 @@ services:
       - SIRIUS_AUTH_REFRESH_TOKEN_EXPIRY=2592000
       - SIRIUS_AUTH_COOKIE_SECRET={{ vault[env_type].SIRIUS_AUTH_COOKIE_SECRET }}
       - SIRIUS_SLACK_CHANNEL=sirius-bot
+      - SIRIUS_SENTRY_DSN=https://e7c750d2c1c94092ba24d85896703a47@sentry.incubateur.net/152
     depends_on:
       - smtp
 
