--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,8 @@
     "@rjsf/core": "5.2.1",
     "@rjsf/utils": "5.2.1",
     "@rjsf/validator-ajv8": "5.2.1",
+    "@sentry/react": "7.112.2",
+    "@sentry/tracing": "7.112.2",
     "@tanstack/react-query": "5.28.9",
     "@tanstack/react-query-devtools": "5.28.10",
     "@tanstack/react-table": "8.10.3",
