--- a/reverse_proxy/app/nginx/nginx.conf
+++ b/reverse_proxy/app/nginx/nginx.conf
@@ -20,11 +20,12 @@ http {
     server_tokens off;
     more_clear_headers Server;
     add_header X-Xss-Protection "0" always;
-    #add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubdomains" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer-when-downgrade";
-
+    add_header Content-Security-Policy "frame-ancestors 'self' onisep.fr";
+    
     gzip on;
     gzip_vary on;
     gzip_proxied any;
