--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "joi": "17.7.0",
     "joi-password-complexity": "5.2.0",
     "jsonwebtoken": "9.0.0",
+    "kysely": "0.27.4",
     "lodash": "4.17.21",
     "mjml": "4.14.1",
     "moment": "2.29.4",
