--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "test:watch": "nodemon --exec \"mocha --require ts-node/register --recursive --exit --timeout 5000 test/**/*.test.ts\"",
     "test:coverage": "nyc --reporter=html --temp-dir .coverage/build --report-dir .coverage mocha --require ts-node/register --recursive --exit --timeout 500 test/**/*.test.ts",
     "build": "tsc",
-    "dev": "nodemon --ignore test/ dist/cli.ts http"
+    "dev": "nodemon --ignore test/ dist/cli.ts http",
+    "kysely": "npx kysely-codegen --schema public --out-file=./src/db/schema.ts --dialect postgres"
   },
   "author": "",
   "license": "ISC",
@@ -81,6 +82,7 @@
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-unused-imports": "4.0.1",
     "globals": "15.8.0",
+    "kysely-codegen": "0.15.0",
     "mocha": "10.2.0",
     "mock-req-res": "1.2.1",
     "nodemon": "2.0.20",
