--- a/server/package.json
+++ b/server/package.json
@@ -59,7 +59,8 @@
     "path": "0.12.7",
     "pdf-lib": "1.17.1",
     "pg": "8.12.0",
-    "qrcode": "1.5.3"
+    "qrcode": "1.5.3",
+    "uuid": "10.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.1.0",
@@ -67,6 +68,7 @@
     "@faker-js/faker": "7.6.0",
     "@types/node": "20.14.10",
     "@types/pg": "8.11.6",
+    "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
     "chai": "4.3.7",
