--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -24,6 +24,8 @@ services:
 
   server:
     command: yarn dev
+    networks:
+      - sirius_network
     ports:
       - "127.0.0.1:9229:9229" #Allows remote debugging
     volumes:
@@ -61,7 +63,7 @@ services:
     environment:
       - POSTGRES_PASSWORD=password
     ports:
-      - "5432:5432"
+      - "127.0.0.1:5432:5432"
     volumes:
       - sirius_postgres_data:/var/lib/postgresql/data:z
 
