--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@sentry/tracing": "7.112.2",
     "@slack/bolt": "3.14.0",
     "axios": "1.3.1",
+    "bcrypt": "5.1.1",
     "body-parser": "1.20.1",
     "bunyan": "1.8.15",
     "bunyan-prettystream": "0.1.3",
@@ -66,7 +67,10 @@
     "@eslint/eslintrc": "3.1.0",
     "@eslint/js": "9.8.0",
     "@faker-js/faker": "7.6.0",
+    "@types/bcrypt": "5.0.2",
     "@types/node": "20.14.10",
+    "@types/passport": "1.0.16",
+    "@types/passport-local": "1.0.38",
     "@types/pg": "8.11.6",
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "7.18.0",
