--- a/server/package.json
+++ b/server/package.json
@@ -70,6 +70,7 @@
     "@types/bcrypt": "5.0.2",
     "@types/node": "20.14.10",
     "@types/passport": "1.0.16",
+    "@types/passport-jwt": "4.0.1",
     "@types/passport-local": "1.0.38",
     "@types/pg": "8.11.6",
     "@types/uuid": "10.0.0",
