--- a/server/package.json
+++ b/server/package.json
@@ -43,6 +43,7 @@
     "joi-password-complexity": "5.2.0",
     "jsonwebtoken": "9.0.0",
     "kysely": "0.27.4",
+    "kysely-paginate": "0.3.1",
     "lodash": "4.17.21",
     "mjml": "4.14.1",
     "moment": "2.29.4",
